// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPill /> snapshot should match snapshot 1`] = `
<ButtonPill>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost 1`] = `
<ButtonPill
  ghost={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={true}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost and disabled 1`] = `
<ButtonPill
  disabled={true}
  ghost={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={true}
    data-ghost={true}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
    isDisabled={true}
  >
    <FocusRing
      disabled={true}
    >
      <FocusRing
        disabled={true}
        focusClass="md-focus-ring-wrapper-disabled"
        focusRingClass="md-focus-ring-wrapper-disabled"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={true}
          data-ghost={true}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when color is outlined 1`] = `
<ButtonPill
  outline={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-outline={true}
    data-size={40}
    data-solid={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-outline={true}
          data-size={40}
          data-solid={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when color is outlined and solid is set 1`] = `
<ButtonPill
  outline={true}
  solid={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-outline={true}
    data-size={40}
    data-solid={true}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-outline={true}
          data-size={40}
          data-solid={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when disabled 1`] = `
<ButtonPill
  disabled={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={true}
    data-ghost={false}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
    isDisabled={true}
  >
    <FocusRing
      disabled={true}
    >
      <FocusRing
        disabled={true}
        focusClass="md-focus-ring-wrapper-disabled"
        focusRingClass="md-focus-ring-wrapper-disabled"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={true}
          data-ghost={false}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when width is grown 1`] = `
<ButtonPill
  grown={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={true}
    data-outline={false}
    data-size={40}
    data-solid={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={true}
          data-outline={false}
          data-size={40}
          data-solid={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with className 1`] = `
<ButtonPill
  className="example-class"
>
  <ButtonSimple
    className="md-button-pill-wrapper example-class"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper example-class md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with color 1`] = `
<ButtonPill
  color="message"
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="message"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="message"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with id 1`] = `
<ButtonPill
  id="example-id"
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with size 1`] = `
<ButtonPill
  size={40}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with style 1`] = `
<ButtonPill
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with title 1`] = `
<ButtonPill
  title="Example Text"
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-outline={false}
    data-size={40}
    data-solid={false}
    title="Example Text"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-outline={false}
          data-size={40}
          data-solid={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          title="Example Text"
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;
